# Lightning-SimulWhisper

./: .gitignore  README.md  VoiceType.spec  build_app.sh  mlx_memory_monitor.py  monitor_memory.py  pyproject.toml  requirements-voicetype.txt  requirements.txt  run.sh  run_with_memory_logging.py  simulstreaming_whisper.py  simulstreaming_whisper_server.py  token_buffer.py  voicetype.py
scripts/: test_coreml_encoder.py
simul_whisper/: config.py  coreml_encoder.py  eow_detection.py  generation_progress.py  simul_whisper.py
simul_whisper/mlx_whisper/: load_models.py
tests/: visualize_timing_comparison.py
whisper_streaming/: base.py  silero_vad_iterator.py  vac_online_processor.py  whisper_online_main.py  whisper_server.py
